1st_home_addLoginSignupForm_addCss

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,18 +16,11 @@
 
     h1 {
       position: absolute;
-      top: 0;
+      top: 10%;
       left: 50%;
       transform: translateX(-50%);
       text-align: center;
       margin-bottom: 20px;
-    }
-
-    .login-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
     }
 
     .login-form {
@@ -35,6 +28,10 @@
       padding: 20px;
       background-color: #f5f5f5;
       border-radius: 5px;
+      display: inline-block;
+      vertical-align: top;
+      margin-top: 10px;
+      align-items: center;
     }
 
     label {
@@ -46,28 +43,39 @@
     input[type="password"] {
       width: 100%;
       padding: 5px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
 
-    input[type="submit"] {
+    .loginBtn {
       background-color: #333;
       color: #fff;
       border: none;
       padding: 5px 10px;
       cursor: pointer;
+      display: block;
+      margin: 40px auto 0;
+    }
+
+    .insertId,
+    .insertPw {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   </style>
 </head>
 <body>
 <h1>로그인</h1>
-<div class="login-container">
   <form action="/login" method="POST" class="login-form">
     <label for="username">ID</label>
-    <input type="text" id="username" name="username" required><br>
+    <div class="insertId">
+      <input type="text" id="username" name="username" required><br>
+    </div>
     <label for="password">PASSWORD</label>
-    <input type="password" id="password" name="password" required><br>
-    <input type="submit" value="로그인">
+    <div class="insertPw">
+      <input type="password" id="password" name="password" required><br>
+    </div>
+    <input type="submit" value="로그인" class="loginBtn">
   </form>
-</div>
 </body>
 </html>
