--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -140,8 +140,8 @@
   <h1 href="/home">My Chef</h1>
   <nav>
     <div id="user-panel">
-      <a href="/login">로그인</a>
-      <a href="/signUp">회원가입</a>
+      <a href="/member/login">로그인</a>
+      <a href="/member/signUp">회원가입</a>
       <form id="search-form">
         <input type="text" placeholder="검색어를 입력해주세요">
         <input type="submit" value="검색">
