--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -66,7 +66,7 @@
 </head>
 <body>
 <h1>로그인</h1>
-  <form action="/login" method="POST" class="login-form">
+  <form action="/member/login" method="POST" class="login-form">
     <label for="username">ID</label>
     <div class="insertId">
       <input type="text" id="username" name="username" required><br>
