--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -67,9 +67,9 @@
 <body>
 <h1>로그인</h1>
   <form action="/member/login" method="POST" class="login-form">
-    <label for="username">ID</label>
+    <label for="eMail">E-Mail</label>
     <div class="insertId">
-      <input type="text" id="username" name="username" required><br>
+      <input type="text" id="eMail" name="eMail" required><br>
     </div>
     <label for="password">PASSWORD</label>
     <div class="insertPw">
