--- a/src/main/resources/templates/addPlace.html
+++ b/src/main/resources/templates/addPlace.html
@@ -131,6 +131,9 @@
     width: 95%;
     height: 400px;
     margin: 0 auto;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
   }
   #addbtn {
     padding: 10px;
