--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
     }
   </script>
 
-  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeQm9e7bqyeC8aJKjdq-Ec5X6YoKM8zqk&callback=initMap"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeQm9e7bqyeC8aJKjdq-Ec5X6YoKM8zqk&callback=initMap&region=kr"></script>
 </head>
 <style>
   body {
@@ -153,7 +153,7 @@
     <ul>
       <li><a href="/home">홈</a></li>           <!--웹 홈 화면-->
       <li><a href="/addPlace">장소 등록</a></li>            <!--장소 등록 화면-->
-      <li><a href="/qna">고객 지원</a></li>         <!--웹 문의 게시판-->
+      <li><a href="/board/list">고객 지원</a></li>         <!--웹 문의 게시판-->
     </ul>
   </nav>
 
