--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -137,6 +137,20 @@
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
   }
 
+  #image-gallery {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+  }
+
+  #image-gallery img {
+    width: 200px;
+    height: auto;
+    margin-right: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+
 </style>
 <body>
 <header>
@@ -145,6 +159,7 @@
     <div id="user-panel">
       <a href="/member/login">로그인</a>
       <a href="/member/signUp">회원가입</a>
+      <a href="/member/logout">로그아웃</a>
       <form id="search-form">
         <input type="text" placeholder="검색어를 입력해주세요">
         <input type="submit" value="검색">
